dnl Process this file with autoconf to produce a configure script.
AC_INIT(X11_stubs.c)
AC_CONFIG_AUX_DIR(../)
AM_INIT_AUTOMAKE(ImageMagick,4.0.1)

dnl Determine which C compiler is being used.
AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_OUTPUT(Makefile)
